[FIX] bug collapse humberger on mobile

--- a/tdesignAPI/css/api.css
+++ b/tdesignAPI/css/api.css
@@ -546,8 +546,8 @@ div.upload input {
 /* Nav menu */
 .nav {
   width: 100%;
-  height: 100%;
-  position: fixed;
+  /* height: 100%;
+  position: fixed; */
   background-color: #fff;
   overflow: hidden;
 }
